# AlphaCLIP

./: pyproject.toml
alpha_clip/: alpha_clip.py
